# graphify

./: .env.example  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  ISSUES.md  PROGRESS.md  README-standalone.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README_TEAM.md  README_TEAM.zh-CN.md  SECURITY.md  SETUP.md  blog_outline.md  flake.nix  graphify-analysis-report.md  graphify.spec  lss.txt  package.sh  project_note.md  project_notes.md  pyproject.toml  review.md  setup.py  summary.md  todo.md  tweet_dm_drafts.md
.AUDIT/: copilot-local-review.sh
.claude/: settings.json
.dox/: 2026-05-05-deterministic-semantic-extraction-final-implementation-runbook.md  2026-05-05-deterministic-semantic-extraction-research.md  2026-05-05-deterministic-semantic-extraction-verification.md  2026-05-06-agent1-extract-phases12.md  2026-05-06-agent1-fact-checking.md  2026-05-06-agent2-architecture.md  2026-05-06-agent2-extract-phases34.md  2026-05-06-agent3-phases56.md  2026-05-06-agent3-security.md  2026-05-06-agent4-debug-testing.md  2026-05-06-agent4-phases78.md  2026-05-06-agent5-coverage.md  2026-05-06-agent5-crosscutting.md  2026-05-06-queen-synthesis.md  2026-05-06-unified-verification-report.md  2026-05-06-verifier1-blockers.md  2026-05-06-verifier2-warnings-confirmations.md  2026-05-06-verifier3-observations-blindspots.md  2026-05-07-independent-review.md  2026-05-07-runbook-changes-master-list.md  2026-05-07-unified-verification.md  2026-05-07-verification-architectural-claims.md  2026-05-07-verification-runbook-consistency.md
.gemini/: settings.json
dataset/: .github_scripts_check_doc_source_of_truth.py.json  backend_app___init__.py.json  backend_app_api___init__.py.json  backend_app_api_routes_explanations.py.json  backend_app_api_routes_heuristics.py.json  backend_app_api_routes_ingest.py.json  backend_app_api_routes_metrics.py.json  backend_app_api_routes_networks.py.json  backend_app_api_routes_policies.py.json  backend_app_api_routes_reports.py.json  backend_app_api_routes_runs.py.json  backend_app_api_routes_transactions.py.json  backend_app_api_routes_wallets.py.json  backend_app_config.py.json  backend_app_dependencies.py.json  backend_app_deps.py.json  backend_app_main.py.json  backend_app_ml___init__.py.json  backend_app_ml_entity_pickle_compat.py.json  backend_app_ml_explainers.py.json  backend_app_ml_graph_features.py.json  backend_app_ml_heuristics___init__.py.json  backend_app_ml_heuristics_ai_enabled.py.json  backend_app_ml_heuristics_base.py.json  backend_app_ml_heuristics_common_red_flags.py.json  backend_app_ml_heuristics_completeness.py.json  backend_app_ml_heuristics_hybrid.py.json  backend_app_ml_heuristics_registry.py.json  backend_app_ml_heuristics_runner.py.json  backend_app_ml_infer_pipeline.py.json  backend_app_ml_lenses___init__.py.json  backend_app_ml_lenses_behavioral_model.py.json  backend_app_ml_lenses_entity_model.py.json  backend_app_ml_lenses_graph_model.py.json  backend_app_ml_lenses_offramp_model.py.json  backend_app_ml_lenses_temporal_model.py.json  backend_app_ml_ml_device.py.json  backend_app_ml_model_paths.py.json  backend_app_ml_platt_calibrator.py.json  backend_app_ml_subgraph_features.py.json  (+302 more)
depos/: NOTICE  __init__.py  api_server.py  auth.py  blast.py  db.py  diagnostics.py  env.py  export_llm.py  federation.py  fusion.py  graph_relations.py  graph_source.py  graph_storage.py  intelligence_store.py  internal_auth.py  llm_tools.py  models.py  ownership.py  postci.py  settings.py  snapshot.py  supabase_client.py
docs/: PHASE1_DOC_ANCHORS.md  README.md  architecture.md  cellmaps-pipeline-notes.md  ci-oidc.md  colabfold-macos-install.md  dataset-pipeline.md  detector-platform.md  detector-registry.md  development.md  graphify-internals.md  how-it-works.md  intent-context.md  lsp-hooks.md  product.md
experiments/: __init__.py  rustworkx_benchmark.py  rustworkx_experiment.py
graphify/: __init__.py  __main__.py  affected.py  aggregate.py  analyze.py  approx.py  ast_lsp.py  benchmark.py  build.py  cache.py  callflow_html.py  cluster.py  constants.py  cypher.py  dashboard.py  db.py  dedup.py  detect.py  deterministic_docs.py  diff.py  domain.py  edge_identity.py  embed.py  embeddings.py  enrichment.py  env.py  export.py  extract.py  extract_arb.py  extract_dart.py  extract_dart_frameworks.py  extract_flutter.py  extract_melos.py  extract_prose.py  extract_pubspec.py  generate_template.py  global_graph.py  google_workspace.py  graph_loader.py  grounding.py  (+69 more)
graphify-out-smoke/: GRAPH_REPORT.md  graph.json
orig_skills/: skill-codex.md  skill-opencode.md  skill.md
scripts/: benchmark_kimi_k2.6.json  benchmark_kimi_k2.6_largechunk.json  build_prompt_schema_index.py  llm.py  refresh_advisories.py  run_k2_6_benchmark.py  run_k2_6_largechunk.py  snapshot_detector_registry.py
supabase/: README.md  config.toml  seed.sql
tests/: bench_extract.py  conftest.py  e2e_small_test.md  e2e_wework_guide.md  test___init__.py  test_affected_cli.py  test_aggregate.py  test_aggregation_integration.py  test_analyze.py  test_api_security.py  test_approx.py  test_arb.py  test_astro_extraction.py  test_benchmark.py  test_benchmark_query.py  test_build.py  test_build_dedup.py  test_cache.py  test_callflow_html.py  test_charmap_encoding.py  test_chunking.py  test_claude_cli_backend.py  test_claude_md.py  test_cli.py  test_cli_export.py  test_cli_layers.py  test_cli_polish.py  test_clone.py  test_cluster.py  test_confidence.py  test_cross_edges.py  test_cross_file_collision.py  test_cypher.py  test_cypher_cli.py  test_dart.py  test_dart_frameworks.py  (+124 more)
(+866 files in other folders)
